# MinecraftHaskell

./: .gitignore  CLAUDE.md  README.md  cabal.project  minecraft-haskell.cabal
app/: Main.hs
docs/superpowers/plans/: 2026-04-02-fly-toggle-reliability.md
docs/superpowers/specs/: 2026-04-02-fly-toggle-design.md
shaders/: block.frag  block.vert  compile.sh  entity.frag  entity.vert  sky.frag  sky.vert  triangle.vert
src/Engine/: BitmapFont.hs  Camera.hs  ChunkMesh.hs  EntityRender.hs  Mesh.hs  Sound.hs  Types.hs  Window.hs
src/Engine/Vulkan/: Command.hs  Descriptor.hs  Init.hs  Memory.hs  Pipeline.hs  Swapchain.hs  Texture.hs
src/Entity/: Component.hs  ECS.hs  Mob.hs  Pathfinding.hs  Spawn.hs  Villager.hs
src/Game/: Achievement.hs  BlockEntity.hs  Bucket.hs  Command.hs  Config.hs  Crafting.hs  Creative.hs  DayNight.hs  DroppedItem.hs  Enchanting.hs  Event.hs  Explosion.hs  Furnace.hs  Inventory.hs  Item.hs  ItemDisplay.hs  ItemRegistry.hs  Particle.hs  Physics.hs  PickupToast.hs  Player.hs  PotionEffect.hs  RecipeRegistry.hs  RedstoneAction.hs  Save.hs  SaveIO.hs  SaveV3.hs  ScreenShake.hs  State.hs  TileEntity.hs  ViewBob.hs  XP.hs
src/Net/: Client.hs  Protocol.hs  Server.hs
src/UI/: CompassBar.hs  CursorItem.hs  EnchantGlow.hs  HUD.hs  Menu.hs  Minimap.hs  PauseMenu.hs  Screen.hs  Text.hs  Tooltip.hs
src/World/: Biome.hs  BiomeFeatures.hs  Block.hs  BlockRegistry.hs  Chunk.hs  Dimension.hs  Fluid.hs  Generation.hs  Light.hs  Noise.hs  Redstone.hs  Structure.hs  Weather.hs  World.hs
test/: Spec.hs  TestHelpers.hs
