cabal-version:      3.0
name:               minecraft-haskell
version:            0.1.0.0
synopsis:           A Minecraft clone written in Haskell with Vulkan rendering
license:            MIT
author:             fanxiyao
build-type:         Simple

common common-opts
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    RecordWildCards
    LambdaCase
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    GeneralizedNewtypeDeriving
    TypeFamilies
    DataKinds
    ScopedTypeVariables
    BangPatterns
    StrictData
    MultiParamTypeClasses
    FlexibleContexts
    FlexibleInstances
    TemplateHaskell
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -O2

library
  import:           common-opts
  hs-source-dirs:   src
  exposed-modules:
    Engine.Types
    Engine.Window
    Engine.Camera
    Engine.Mesh
    Engine.BitmapFont
    Engine.Sound
    Engine.Vulkan.Init
    Engine.Vulkan.Swapchain
    Engine.Vulkan.Pipeline
    Engine.Vulkan.Command
    Engine.Vulkan.Memory
    Engine.Vulkan.Descriptor
    Engine.Vulkan.Texture
    World.Block
    World.Chunk
    World.Noise
    World.Biome
    World.Generation
    World.World
    World.Light
    World.Redstone
    World.Fluid
    World.Weather
    Game.Physics
    Game.Player
    Game.BlockEntity
    Game.Inventory
    Game.Item
    Game.Furnace
    Game.Command
    Game.Crafting
    Game.Enchanting
    Game.DayNight
    Game.Save
    Game.State
    Game.ItemDisplay
    Game.DroppedItem
    Game.Particle
    Entity.ECS
    Entity.Mob
    Entity.Pathfinding
    Entity.Spawn
    Net.Protocol
    Net.Server
    Net.Client
    UI.HUD
    UI.Menu
    UI.Text
  build-depends:
    , base             >= 4.17  && < 5
    , vulkan           >= 3.26
    , GLFW-b           >= 3.3
    , linear           >= 1.22
    , vector           >= 0.13
    , bytestring       >= 0.11
    , containers       >= 0.6
    , unordered-containers >= 0.2
    , hashable         >= 1.4
    , stm              >= 2.5
    , async            >= 2.2
    , binary           >= 0.8
    , filepath         >= 1.4
    , directory        >= 1.3
    , random           >= 1.2
    , network          >= 3.1

executable minecraft
  import:           common-opts
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
  build-depends:
    , base
    , minecraft-haskell
    , vulkan
    , GLFW-b
    , vector
    , linear
    , filepath
    , stm
    , unordered-containers
    , containers
    , random

test-suite minecraft-test
  import:           common-opts
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    , base
    , minecraft-haskell
    , hspec            >= 2.11
    , QuickCheck       >= 2.14
    , linear
    , vector
    , stm
    , unordered-containers
    , binary
